# deserve

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release-binaries.yml
.github/workflows/_disabled/: test-zombienet.yml
_scripts/: build-genesis-wasm-and-head.sh  build-weights.sh  generate-chain-specs.sh  test.sh  try-runtime.sh
_zombienet/: zombienet-omni-node.toml  zombienet.toml
node/: Cargo.toml  README.md
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/: README.md
pallets/deserve/: Cargo.toml
pallets/deserve/src/: benchmarking.rs  lib.rs  mock_runtime.rs  tests.rs  weights.rs
runtime/: Cargo.toml  README.md  build.rs
runtime/src/: benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: identity_info.rs  mod.rs
