[package]
name = "deserve-node"
description = "DeServe blockchain node."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false
build = "build.rs"

[lints]
workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
codec = { workspace = true, default-features = true }
color-print = { workspace = true }
deserve-runtime.workspace = true
docify = { workspace = true }
futures = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
log = { workspace = true, default-features = true }
polkadot-sdk = { workspace = true, features = ["node", "polkadot-primitives"] }
prometheus-endpoint.default-features = true
prometheus-endpoint.workspace = true
serde = { features = ["derive"], workspace = true, default-features = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = ["deserve-runtime/std", "log/std", "polkadot-sdk/std"]
runtime-benchmarks = [
    "deserve-runtime/runtime-benchmarks",
    "polkadot-sdk/runtime-benchmarks",
]
try-runtime = ["deserve-runtime/try-runtime", "polkadot-sdk/try-runtime"]
